--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script src="js/matrix.js"></script>
     <script src="js/vector.js"></script>
-    <script src="js/world.js"></script>
+    <script src="js/world2d.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
