Scrolling feature with mouse drag.. Small features e.g. Vector.zero creates a zero vector

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 <body>
     <canvas id="canvas" width="600px" height="600px">This browser does not support canvas.</canvas>
 
+    <!-- Framework -->
     <script src="js/matrix.js"></script>
     <script src="js/vector.js"></script>
+    <!-- Data -->
+    <script src="js/data.js"></script>
+    <!-- GUI -->
     <script src="js/world2d.js"></script>
+    <script src="js/mouse.js"></script>
+    <!-- Main -->
     <script src="js/script.js"></script>
 </body>
 </html>
