Simple line functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Framework -->
     <script src="js/matrix.js"></script>
     <script src="js/vector.js"></script>
+    <script src="js/line.js"></script>
     <!-- Data -->
     <script src="js/data.js"></script>
     <!-- GUI -->
